--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <button id="shrink">Shrink!</button>
-    <button id="">Convert!</button>
+    <button id="convert">Convert!</button>
     <script src="action.js"></script>
   </body>
 </html>
