implement the textHandler

--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,6 @@
   <body>
     <button id="shrink">Shrink!</button>
     <button id="convert">Convert!</button>
-    <script src="action.js"></script>
+    <script src="action.js" type="module"></script>
   </body>
 </html>
