--- a/popup.html
+++ b/popup.html
@@ -10,8 +10,8 @@
     </style>
   </head>
   <body>
-    <button id="shrink">Shrink!</button>
-    <button id="convert">Convert!</button>
+    <button id="shrink">Compress!</button>
+    <button id="convert">Show!</button>
     <script src="action.js" type="module"></script>
   </body>
 </html>
